syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "github.com/xuperdata/teesdk/paillier/xchain_plugin/pb";

message SyscallHeader {
  int64 ctxid = 1;
}


message TrustFunctionCallRequest {
  SyscallHeader header = 1;
  string method = 2;
  string args = 3;
  uint32 svn = 4;
  string address = 5;
  string publicKey = 6;
  string signature = 7;
}

message KVPair {
  string key = 1;
  string value = 2;
}

message KVPairs {
  repeated KVPair kv = 1;
}

// result of trust call must return a key-value array, key is plain, and value is cipher,
// then be persisted by put_object.
message TrustFunctionCallResponse {
  oneof results {
    string plaintext = 2;
    KVPairs kvs = 3;
  }
}

// paillier encryption params and outputs
message KeyGenParams {
	int64 secbit = 1;
}
message KeyGenOutputs {
	string privateKey = 1;
	string publicKey = 2;
}

message PaillierEncParams {
	string message = 1;
	string publicKey = 2;
}
message PaillierEncOutputs {
	string ciphertext = 1;
}

message PaillierDecParams {
	string ciphertext = 1;
	string publicKey = 2;
	string prvkeyPath = 3;
	string password = 4;
}
message PaillierDecOutputs {
	string plaintext = 1;
}

message PaillierMulParams {
	string publicKey = 1;
	string ciphertext1 = 2;
	string ciphertext2 = 3;
	string commitment1 = 4;
	string commitment2 = 5;
}
message PaillierMulOutputs {
	string ciphertext = 1;
}

message PaillierExpParams {
	string publicKey = 1;
	string ciphertext = 2;
	string commitment = 3;
	string scalar = 4;
}
message PaillierExpOutputs {
	string ciphertext = 1;
}